kubernetes/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movieworld
  namespace: movie
  labels:
    app: movieworld
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movieworld
      version: v1
  template:
    metadata:
      labels:
        app: movieworld
        version: v1
    spec:
      containers:
      - name: movieworld
        image: us-central1-docker.pkg.dev/project-stuti-477509/argocd-poc-repo/movieworld-app-image:8d221554451277016dd75b897417cc9413773598
        imagePullPolicy: Always
        ports:
        - containerPort: 9090
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 9090
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 9090
          initialDelaySeconds: 60
          periodSeconds: 15
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
      volumes:
      - name: config-volume
        configMap:
          name: movieworld-config
